--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.309",
     "react-router-dom": "^7.9.1",
-    "tailwindcss": "^4.1.13"
+    "react-tsparticles": "^2.12.2",
+    "tailwindcss": "^4.1.13",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
